--- a/data/themes/nord.toml
+++ b/data/themes/nord.toml
@@ -17,7 +17,8 @@ name = "nord"
   menu_title = "#FFFFFF"
 
   # Background
-  background = "#FFFFFF"
+  #background = "#FFFFFF"
+  background = "#0f0f0f"
 
   # Home sections
   home_section_odd = "#FFFFFF"
